; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_cache-tree.c_cache_tree_find_subtree.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_cache-tree.c_cache_tree_find_subtree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_tree_sub = type { i32 }
%struct.cache_tree = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cache_tree_sub* @cache_tree_find_subtree(%struct.cache_tree* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.cache_tree*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.cache_tree* %0, %struct.cache_tree** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.cache_tree*, %struct.cache_tree** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call %struct.cache_tree_sub* @find_subtree(%struct.cache_tree* %9, i8* %10, i32 %11, i32 %12)
  ret %struct.cache_tree_sub* %13
}

declare dso_local %struct.cache_tree_sub* @find_subtree(%struct.cache_tree*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
